Interpreter and sli

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [workspace]
-resolver = "2"
+members = ["crates/*"]
 
-members = [
-    "assembly",
-]
+[workspace.package]
+name = "zCrayVM"
+version = "0.1.0"
+edition = "2021"
 
+[workspace.dependencies]
