Emulator first draft.
Co-authored-by: Hamy Ratoanina <hratoanina@polygon.technology>
Co-authored-by: 4l0n50 <alonso.gon@gmail.com>

--- a/assembly/Cargo.toml
+++ b/assembly/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "zcrayvm-assembly"
-version = "0.1.0"
-edition = "2024"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
 thiserror = "2.0.11"
+num_enum = "=0.5.3"
 
