--- a/assembly/Cargo.toml
+++ b/assembly/Cargo.toml
@@ -8,3 +8,6 @@ thiserror = "2.0.11"
 num_enum = "=0.5.3"
 binius_field.workspace = true
 binius_utils.workspace = true
+
+[dev-dependencies]
+rand = "0.8"
