--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,13 @@ version = "0.1.0"
 edition = "2021"
 
 [workspace.dependencies]
+anyhow = "1.0.81"
+bytemuck = { version = "1.18.0", features = [
+    "derive",
+    "min_const_generics",
+    "must_cast",
+] }
 binius_field = {git = "https://github.com/IrreducibleOSS/binius.git", branch = "main"}
 binius_utils = {git = "https://github.com/IrreducibleOSS/binius.git", branch = "main"}
+binius_m3 = {git = "https://github.com/IrreducibleOSS/binius.git", branch = "main"}
+binius_core = {git = "https://github.com/IrreducibleOSS/binius.git", branch = "main"}
