--- a/assembly/Cargo.toml
+++ b/assembly/Cargo.toml
@@ -13,6 +13,10 @@ pest = "2.7.15"
 pest_derive = "2.7.15"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+binius_m3.workspace = true
+binius_core.workspace = true
+bytemuck.workspace = true
+anyhow.workspace = true
 
 [dev-dependencies]
 rand = "0.8"
