--- a/assembly/Cargo.toml
+++ b/assembly/Cargo.toml
@@ -9,6 +9,7 @@ num_enum = "=0.5.3"
 binius_field.workspace = true
 binius_utils.workspace = true
 env_logger = "0.11.6"
+num-traits = "0.2"
 pest = "2.7.15"
 pest_derive = "2.7.15"
 tracing = "0.1.41"
