--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,11 @@ bytemuck = { version = "1.18.0", features = [
     "min_const_generics",
     "must_cast",
 ] }
-binius_field = {git = "https://github.com/IrreducibleOSS/binius.git", branch = "main"}
-binius_utils = {git = "https://github.com/IrreducibleOSS/binius.git", branch = "main"}
-binius_m3 = {git = "https://github.com/IrreducibleOSS/binius.git", branch = "main"}
-binius_core = {git = "https://github.com/IrreducibleOSS/binius.git", branch = "main"}
+binius_field = {path = "../binius/crates/field"}
+binius_utils = {path = "../binius/crates/utils"}
+binius_m3 = {path = "../binius/crates/m3"}
+binius_core = {path = "../binius/crates/core"}
+# binius_field = {git = "https://github.com/IrreducibleOSS/binius.git", branch = "main"}
+# binius_utils = {git = "https://github.com/IrreducibleOSS/binius.git", branch = "main"}
+# binius_m3 = {git = "https://github.com/IrreducibleOSS/binius.git", branch = "main"}
+# binius_core = {git = "https://github.com/IrreducibleOSS/binius.git", branch = "main"}
