--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,9 @@ binius_field = {path = "../binius/crates/field"}
 binius_utils = {path = "../binius/crates/utils"}
 binius_m3 = {path = "../binius/crates/m3"}
 binius_core = {path = "../binius/crates/core"}
+binius_hash = {path = "../binius/crates/hash"}
+binius_math = {path = "../binius/crates/math"}
+binius_hal = {path = "../binius/crates/hal"}
 # binius_field = {git = "https://github.com/IrreducibleOSS/binius.git", branch = "main"}
 # binius_utils = {git = "https://github.com/IrreducibleOSS/binius.git", branch = "main"}
 # binius_m3 = {git = "https://github.com/IrreducibleOSS/binius.git", branch = "main"}
