--- a/assembly/Cargo.toml
+++ b/assembly/Cargo.toml
@@ -14,6 +14,10 @@ pest = "2.7.15"
 pest_derive = "2.7.15"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+groestl_crypto = { package = "groestl", version = "0.10.1" }
+binius_math.workspace = true
+binius_hash.workspace = true
+binius_hal.workspace = true
 binius_m3.workspace = true
 binius_core.workspace = true
 bytemuck.workspace = true
