--- a/prover/Cargo.toml
+++ b/prover/Cargo.toml
@@ -7,11 +7,12 @@ authors = ["zCray Team"]
 [dependencies]
 log = "0.4"
 env_logger = "0.11.7"
-binius_core = { git = "https://github.com/IrreducibleOSS/binius.git", branch = "main" }
-binius_field = { git = "https://github.com/IrreducibleOSS/binius.git", branch = "main" }
-binius_m3 = { git = "https://github.com/IrreducibleOSS/binius.git", branch = "main" }
-binius_hash = { git = "https://github.com/IrreducibleOSS/binius.git", branch = "main" }
-binius_hal = { git = "https://github.com/IrreducibleOSS/binius.git", branch = "main" }
+binius_core.workspace = true
+binius_field.workspace = true
+binius_m3.workspace = true
+binius_hash.workspace = true
+binius_hal.workspace = true
+binius_math.workspace = true
 anyhow = "1.0"
 zcrayvm-assembly = { path = "../assembly" }
 bumpalo = { version = "3.16.0", features = ["collections"] }
@@ -20,6 +21,6 @@ bytemuck = { version = "1.18.0", features = [
     "min_const_generics",
 ] }
 thiserror = "2.0.11"
-
+groestl_crypto = { package = "groestl", version = "0.10.1" }
 [dev-dependencies]
 zcrayvm-assembly = { path = "../assembly" }
