--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,10 @@ binius_core = {path = "../binius/crates/core"}
 binius_hash = {path = "../binius/crates/hash"}
 binius_math = {path = "../binius/crates/math"}
 binius_hal = {path = "../binius/crates/hal"}
-# binius_field = {git = "https://github.com/IrreducibleOSS/binius.git", branch = "main"}
-# binius_utils = {git = "https://github.com/IrreducibleOSS/binius.git", branch = "main"}
-# binius_m3 = {git = "https://github.com/IrreducibleOSS/binius.git", branch = "main"}
-# binius_core = {git = "https://github.com/IrreducibleOSS/binius.git", branch = "main"}
-# binius_hash = {git = "https://github.com/IrreducibleOSS/binius.git", branch = "main"}
-# binius_math = {git = "https://github.com/IrreducibleOSS/binius.git", branch = "main"}
-# binius_hal = {git = "https://github.com/IrreducibleOSS/binius.git", branch = "main"}
+# binius_field = {git = "https://github.com/0xPolygonZero/binius.git", branch = "vec_option_tables"}
+# binius_utils = {git = "https://github.com/0xPolygonZero/binius.git", branch = "vec_option_tables"}
+# binius_m3 = {git = "https://github.com/0xPolygonZero/binius.git", branch = "vec_option_tables"}
+# binius_core = {git = "https://github.com/0xPolygonZero/binius.git", branch = "vec_option_tables"}
+# binius_hash = {git = "https://github.com/0xPolygonZero/binius.git", branch = "vec_option_tables"}
+# binius_math = {git = "https://github.com/0xPolygonZero/binius.git", branch = "vec_option_tables"}
+# binius_hal = {git = "https://github.com/0xPolygonZero/binius.git", branch = "vec_option_tables"}
