--- a/assembly/Cargo.toml
+++ b/assembly/Cargo.toml
@@ -17,5 +17,8 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 strum = "0.27.1"
 strum_macros = "0.27.1"
 
+# Binius dependencies
+binius_m3.workspace = true
+
 [dev-dependencies]
 rand = "0.9.0"
