--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,16 @@ version = "0.1.0"
 edition = "2021"
 
 [workspace.dependencies]
-binius_core = { git = "https://github.com/IrreducibleOSS/binius.git", rev = "615ad50e" } # TODO: fix revision
-binius_field = { git = "https://github.com/IrreducibleOSS/binius.git", rev = "615ad50e" }
-binius_utils = { git = "https://github.com/IrreducibleOSS/binius.git", rev = "615ad50e" }
-binius_m3 = { git = "https://github.com/IrreducibleOSS/binius.git", rev = "615ad50e" }
-binius_hash = { git = "https://github.com/IrreducibleOSS/binius.git", rev = "615ad50e" }
-binius_hal = { git = "https://github.com/IrreducibleOSS/binius.git", rev = "615ad50e" }
+# binius_core = { git = "https://github.com/IrreducibleOSS/binius.git", commit = "41930a8c3c5bfbfe39a2cc2ebd3d23ce8f19712e" }
+# binius_field = { git = "https://github.com/IrreducibleOSS/binius.git",  commit = "41930a8c3c5bfbfe39a2cc2ebd3d23ce8f19712e" }
+# binius_utils = { git = "https://github.com/IrreducibleOSS/binius.git", commit = "41930a8c3c5bfbfe39a2cc2ebd3d23ce8f19712e" }
+# binius_m3 = { git = "https://github.com/IrreducibleOSS/binius.git", commit = "41930a8c3c5bfbfe39a2cc2ebd3d23ce8f19712e" }
+# binius_hash = { git = "https://github.com/IrreducibleOSS/binius.git", commit = "41930a8c3c5bfbfe39a2cc2ebd3d23ce8f19712e" }
+# binius_hal = { git = "https://github.com/IrreducibleOSS/binius.git", commit = "41930a8c3c5bfbfe39a2cc2ebd3d23ce8f19712e" }
+
+binius_core = { path = "../binius/crates/core" }
+binius_field = { path = "../binius/crates/field" }
+binius_utils = { path = "../binius/crates/utils" }
+binius_m3 = { path = "../binius/crates/m3" }
+binius_hash = { path = "../binius/crates/hash" }
+binius_hal = { path = "../binius/crates/hal" }
