--- a/assembly/Cargo.toml
+++ b/assembly/Cargo.toml
@@ -10,6 +10,7 @@ binius_field.workspace = true
 binius_utils.workspace = true
 env_logger = "0.11.6"
 num-traits = "0.2"
+once_cell = "1.21.3"
 pest = "2.7.15"
 pest_derive = "2.7.15"
 tracing = "0.1.41"
