--- a/assembly/Cargo.toml
+++ b/assembly/Cargo.toml
@@ -4,6 +4,7 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+anyhow.workspace = true
 thiserror = "2.0.11"
 num_enum = "0.7.3"
 binius_field.workspace = true
