--- a/prover/Cargo.toml
+++ b/prover/Cargo.toml
@@ -5,9 +5,9 @@ edition.workspace = true
 authors = ["zCray Team"]
 
 [dependencies]
+anyhow.workspace = true
 log = "0.4"
 env_logger = "0.11.7"
-anyhow = "1.0"
 zcrayvm-assembly = { path = "../assembly" }
 bumpalo = { version = "3.16.0", features = ["collections"] }
 bytemuck = { version = "1.18.0", features = ["derive", "min_const_generics"] }
