--- a/assembly/Cargo.toml
+++ b/assembly/Cargo.toml
@@ -9,6 +9,8 @@ thiserror = "2.0.11"
 num_enum = "0.7.3"
 binius_field.workspace = true
 binius_utils.workspace = true
+bytemuck = "1.14"
+generic-array = "0.14.7"
 env_logger = "0.11.6"
 num-traits = "0.2"
 once_cell = "1.21.3"
@@ -21,6 +23,7 @@ strum_macros = "0.27.1"
 
 # Binius dependencies
 binius_m3.workspace = true
+binius_hash.workspace = true
 
 [dev-dependencies]
 rand = "0.9.0"
