--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,9 @@ edition = "2021"
 
 [workspace.dependencies]
 anyhow = "1.0"
-binius_core = { git = "https://github.com/IrreducibleOSS/binius.git" }
-binius_field = { git = "https://github.com/IrreducibleOSS/binius.git" }
-binius_utils = { git = "https://github.com/IrreducibleOSS/binius.git" }
-binius_m3 = { git = "https://github.com/IrreducibleOSS/binius.git" }
-binius_hash = { git = "https://github.com/IrreducibleOSS/binius.git" }
-binius_hal = { git = "https://github.com/IrreducibleOSS/binius.git" }
+binius_core = { path = "../../binius/crates/core" }
+binius_field = { path = "../../binius/crates/field" }
+binius_utils = { path = "../../binius/crates/utils" }
+binius_m3 = { path = "../../binius/crates/m3" }
+binius_hash = { path = "../../binius/crates/hash" }
+binius_hal = { path = "../../binius/crates/hal" }
