--- a/prover/Cargo.toml
+++ b/prover/Cargo.toml
@@ -8,6 +8,7 @@ authors = ["zCray Team"]
 anyhow.workspace = true
 log = "0.4"
 env_logger = "0.11.7"
+paste = "1.0.15"
 zcrayvm-assembly = { path = "../assembly" }
 bumpalo = { version = "3.16.0", features = ["collections"] }
 bytemuck = { version = "1.18.0", features = ["derive", "min_const_generics"] }
