--- a/prover/Cargo.toml
+++ b/prover/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["zCray Team"]
 
 [dependencies]
 anyhow.workspace = true
+clap = { version = "4.5.20", features = ["derive"] }
 log = "0.4"
 env_logger = "0.11.7"
 paste = "1.0.15"
