--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,9 @@ edition = "2021"
 
 [workspace.dependencies]
 anyhow = "1.0"
-binius_core = { git = "https://github.com/0xPolygonZero/binius.git", branch = "alonso/barrel_shifter" }
-binius_field = { git = "https://github.com/0xPolygonZero/binius.git", branch = "alonso/barrel_shifter" }
-binius_utils = { git = "https://github.com/0xPolygonZero/binius.git", branch = "alonso/barrel_shifter" }
-binius_m3 = { git = "https://github.com/0xPolygonZero/binius.git", branch = "alonso/barrel_shifter" }
-binius_hash = { git = "https://github.com/0xPolygonZero/binius.git", branch = "alonso/barrel_shifter" }
-binius_hal = { git = "https://github.com/0xPolygonZero/binius.git", branch = "alonso/barrel_shifter" }
+binius_core = { git = "https://github.com/IrreducibleOSS/binius.git" }
+binius_field = { git = "https://github.com/IrreducibleOSS/binius.git" }
+binius_utils = { git = "https://github.com/IrreducibleOSS/binius.git" }
+binius_m3 = { git = "https://github.com/IrreducibleOSS/binius.git" }
+binius_hash = { git = "https://github.com/IrreducibleOSS/binius.git" }
+binius_hal = { git = "https://github.com/IrreducibleOSS/binius.git" }
