--- a/prover/Cargo.toml
+++ b/prover/Cargo.toml
@@ -26,3 +26,4 @@ binius_hal.workspace = true
 zcrayvm-assembly = { path = "../assembly" }
 binius_m3 = { workspace = true, features = ["test_utils"] }
 rand = { version = "0.9.1", features = ["std"] }
+proptest = "1.4.0"
