--- a/prover/Cargo.toml
+++ b/prover/Cargo.toml
@@ -27,3 +27,9 @@ binius_m3 = { workspace = true, features = ["test_utils"] }
 proptest = "1.4.0"
 rand = { version = "0.9.1", features = ["std"] }
 zcrayvm-assembly = { path = "../assembly" }
+criterion = "0.5.1"
+
+# Explicitly define the benchmark target
+[[bench]]
+name = "shift"
+harness = false # Criterion provides its own harness
