--- a/assembly/Cargo.toml
+++ b/assembly/Cargo.toml
@@ -10,7 +10,7 @@ num_enum = "0.7.3"
 binius_field.workspace = true
 binius_utils.workspace = true
 bytemuck = "1.14"
-generic-array = "0.14.7"
+generic-array.workspace = true
 env_logger = "0.11.6"
 num-traits = "0.2"
 once_cell = "1.21.3"
