--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ binius_utils = { git = "https://github.com/IrreducibleOSS/binius.git" }
 binius_m3 = { git = "https://github.com/IrreducibleOSS/binius.git" }
 binius_hash = { git = "https://github.com/IrreducibleOSS/binius.git" }
 binius_hal = { git = "https://github.com/IrreducibleOSS/binius.git" }
+generic-array = "0.14.7"
