--- a/prover/Cargo.toml
+++ b/prover/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "zcrayvm-prover"
+name = "petravm-prover"
 version.workspace = true
 edition.workspace = true
-authors = ["zCray Team"]
+authors = ["Petra Team"]
 
 [dependencies]
 anyhow.workspace = true
@@ -13,7 +13,7 @@ env_logger = "0.11.7"
 log = "0.4"
 paste = "1.0.15"
 thiserror = "2.0.11"
-zcrayvm-assembly = { path = "../assembly" }
+petravm-assembly = { path = "../assembly" }
 
 # Binius dependencies
 binius_core.workspace = true
@@ -26,4 +26,4 @@ binius_m3.workspace = true
 binius_m3 = { workspace = true, features = ["test_utils"] }
 proptest = "1.4.0"
 rand = { version = "0.9.1", features = ["std"] }
-zcrayvm-assembly = { path = "../assembly" }
+petravm-assembly = { path = "../assembly" }
