Add verifier template

--- a/prover/Cargo.toml
+++ b/prover/Cargo.toml
@@ -3,7 +3,7 @@ name = "petravm-prover"
 version.workspace = true
 edition.workspace = true
 description = "PetraVM's prover"
-documentation = "https://docs.rs/petravm-assembly"
+documentation = "https://docs.rs/petravm-prover"
 license.workspace = true
 repository.workspace = true
 homepage.workspace = true
