--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -45,7 +45,7 @@ jobs:
           path: ./book/book
 
   deploy:
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: build
     steps:
