--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -33,15 +33,18 @@ jobs:
       - uses: taiki-e/install-action@v2
         with:
           tool: cargo-udeps
-      - run: cargo udeps --quiet
-      - run: cargo udeps --quiet --tests --benches --examples
+      - run: cargo udeps --quiet --all-targets --workspace
   rustdoc:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/rust
-      - run: RUSTDOCFLAGS='-D warnings -A rustdoc::private_intra_doc_links -A rustdoc::broken-intra-doc-links' cargo doc --all --no-deps
+      - run: |-
+          RUSTDOCFLAGS='-D warnings \
+            -A rustdoc::private_intra_doc_links \
+            -A rustdoc::broken-intra-doc-links' \
+          cargo doc --all --no-deps
 
   cargo-fmt:
     runs-on: ubuntu-latest
@@ -69,4 +72,4 @@ jobs:
       - uses: taiki-e/install-action@v2
         with:
           tool: cargo-outdated
-      - run: cargo xtask outdated
+      - run: cargo outdated --workspace --aggressive
