--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -40,10 +40,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/rust
-      - run: |-
-          RUSTDOCFLAGS='-D warnings \
-            -A rustdoc::private_intra_doc_links \
-            -A rustdoc::broken-intra-doc-links' \
+      - run: |
+          RUSTDOCFLAGS="-D warnings -A rustdoc::private_intra_doc_links -A rustdoc::broken-intra-doc-links" \
           cargo doc --all --no-deps
 
   cargo-fmt:
