--- a/assembly/Cargo.toml
+++ b/assembly/Cargo.toml
@@ -25,6 +25,7 @@ strum = "0.27.1"
 strum_macros = "0.27.1"
 thiserror = "2.0.12"
 tracing.workspace = true
+tracing-forest.workspace = true
 tracing-subscriber.workspace = true
 
 # Binius dependencies
