--- a/prover/Cargo.toml
+++ b/prover/Cargo.toml
@@ -22,6 +22,7 @@ paste = "1.0.15"
 petravm-asm = { path = "../assembly" }
 thiserror = "2.0.12"
 tracing.workspace = true
+tracing-forest.workspace = true
 tracing-subscriber.workspace = true
 
 # Binius dependencies
