--- a/assembly/Cargo.toml
+++ b/assembly/Cargo.toml
@@ -28,9 +28,14 @@ thiserror = "2.0.12"
 tracing.workspace = true
 tracing-forest.workspace = true
 tracing-subscriber.workspace = true
+tracing-profile.workspace = true
 
 # Binius dependencies
 binius_m3.workspace = true
 
 [dev-dependencies]
 rand = "0.9.1"
+
+[features]
+tracing-profile = []
+perfetto = ["tracing-profile/perfetto"]
