--- a/prover/Cargo.toml
+++ b/prover/Cargo.toml
@@ -25,6 +25,7 @@ thiserror = "2.0.12"
 tracing.workspace = true
 tracing-forest.workspace = true
 tracing-subscriber.workspace = true
+tracing-profile.workspace = true
 
 # Binius dependencies
 binius_core.workspace = true
