--- a/assembly/Cargo.toml
+++ b/assembly/Cargo.toml
@@ -31,10 +31,16 @@ tracing-subscriber.workspace = true
 
 # Binius dependencies
 binius_m3.workspace = true
+smallvec = "1.15.1"
 
 [dev-dependencies]
+criterion = "0.5.1"
 rand = "0.9.1"
 
 [features]
 tracing-profile = []
 perfetto = ["tracing-profile", "tracing-profile/perfetto"]
+
+[[bench]]
+name = "vrom_access"
+harness = false
