--- a/assembly/Cargo.toml
+++ b/assembly/Cargo.toml
@@ -16,6 +16,8 @@ categories.workspace = true
 anyhow.workspace = true
 binius_field.workspace = true
 binius_utils.workspace = true
+bytemuck = "1.14"
+generic-array.workspace = true
 num-traits = "0.2"
 num_enum = "0.7.3"
 once_cell = "1.21.3"
@@ -30,6 +32,7 @@ tracing-profile.workspace = true
 tracing-subscriber.workspace = true
 
 # Binius dependencies
+binius_hash.workspace = true
 binius_m3.workspace = true
 
 [dev-dependencies]
